--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -102,41 +102,41 @@ header.site {
 }
 
 .avatar {
-    width: 110px;
-    height: 110px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
-    border: 2px solid color-mix(in oklab, var(--accent) 40%, #fff)
+    border: 2px solid color-mix(in oklab, var(--accent) 40%, #fff);
 }
 
 .avatar-wrap {
     position: relative;
-    display: inline-block
+    display: inline-block;
 }
 
 .avatar-badge {
     position: absolute;
-    right: -10px;
-    bottom: -10px;
-    width: 46px;
-    height: 46px;
+    right: -6px;
+    bottom: -6px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
-    background: #fff url("../img/KC.svg") center/92% no-repeat;
+    background: #fff url("assets/img/KC.svg") center/90% no-repeat;
     border: 1px solid var(--ring);
     display: grid;
     place-items: center;
-    font: 800 16px/1 "Playfair Display", serif;
-    color: transparent;
+    font-size: 0;
+    color: var(--accent);
 }
 
 :root[data-theme="carlos"] .avatar-badge {
-    background-image: url("../img/Williams_logo.png");
-    color: transparent
+    background: #fff url("assets/img/Williams_logo.png") center/90% no-repeat;
+    border-color: #0d347e;
 }
 
 :root[data-theme="lando"] .avatar-badge {
-    background-image: url("../img/mclaren_logo.png");
-    color: transparent
+    background: #fff url("assets/img/mclaren_logo.png") center/90% no-repeat;
+    border-color: #ff8000;
 }
 
 .btn {
