--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -102,8 +102,8 @@ header.site {
 }
 
 .avatar {
-    width: 80px;
-    height: 80px;
+    width: 115px;
+    height: 115px;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid color-mix(in oklab, var(--accent) 40%, #fff);
@@ -118,12 +118,11 @@ header.site {
     position: absolute;
     right: -3px;
     bottom: -3px;
-    width: 22px;
-    height: 22px;
+    width: 36.5px;
+    height: 36.5px;
     border-radius: 50%;
-    background: #fff url("assets/img/KC.svg") center/88% no-repeat;
+    background: #fff url("assets/img/KC.png") center/88% no-repeat;
     border: 1px solid var(--ring);
-    font-size: 0;
 }
 
 :root[data-theme="carlos"] .avatar-badge {
